# Hallow

./: LICENSE  README.md
hallow/: CMakeLists.txt
hallow/cmake/: FindGLSLang.cmake
hallow/res/shaders/: simple_combined_shader.glsl  simple_shader.frag  simple_shader.vert
hallow/src/: WinMain.cpp
hallow/src/application/: HallowApp.cpp  HallowApp.hpp
hallow/src/application/game/: HallowGame.cpp  HallowGame.hpp
hallow/src/application/game_objects/: Cube.cpp  Cube.hpp  SimpleTriangle.cpp  SimpleTriangle.hpp
hallow/src/application/sierpinski/: Sierpinski.cpp  Sierpinski.hpp
hallow/src/engine/color/: HallowColor.cpp  HallowColor.hpp
hallow/src/engine/color/srgb_transform/: SrgbTransform.cpp  SrgbTransform.hpp
hallow/src/engine/device/: HallowDevice.cpp  HallowDevice.hpp
hallow/src/engine/game_object/: GameObject.cpp  GameObject.hpp  HallowGameObject.cpp  HallowGameObject.hpp
hallow/src/engine/model/: HallowModel.cpp  HallowModel.hpp
hallow/src/engine/pipeline/: HallowPipeline.cpp  HallowPipeline.hpp
hallow/src/engine/renderer/: HallowRenderer.cpp  HallowRenderer.hpp  RendererOptions.hpp
hallow/src/engine/renderer/render_system/: RenderSystem.cpp  RenderSystem.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp
hallow/src/engine/shaders/: HallowShader.cpp  HallowShader.hpp
hallow/src/engine/swap_chain/: HallowSwapChain.cpp  HallowSwapChain.hpp
hallow/src/engine/time/: Stopwatch.hpp  Time.cpp  Time.hpp  TimePoint.hpp
hallow/src/engine/window/: HallowWindow.cpp  HallowWindow.hpp
project_a/: CMakeLists.txt  compile_shader.bat
project_a/include/GLFW/: glfw3.h
project_a/res/shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert
project_a/src/: WinMain.cpp  main.cpp
project_a/src/application/: HallowApp.cpp  HallowApp.h
project_a/src/engine/color/: HallowColor.h
project_a/src/engine/device/: HallowDevice.cpp  HallowDevice.h  HallowEngineDevice.cpp  HallowEngineDevice.h
project_a/src/engine/pipeline/: HallowPipeline.cpp  HallowPipeline.h
project_a/src/engine/swap_chain/: HallowSwapChain.cpp  HallowSwapChain.h
project_a/src/engine/time/: Stopwatch.h  Time.cpp  Time.h  TimePoint.h
project_a/src/engine/window/: HallowWindow.cpp  HallowWindow.h
